# rboy-legogb

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: build_test.yml
src/: app_config.rs  args.rs  cpu.rs  device.rs  framebuffer.rs  gpu.rs  input.rs  keypad.rs  main.rs  menu.rs  mmu.rs  printer.rs  register.rs
src/app_config/: keycode.rs
src/args/: log_level.rs
src/input/: config.rs  pinout.rs
src/mbc/: mbc0.rs  mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  mod.rs
