[package]
name = "rboy"
version = "0.2.0"
authors = [
  "mvdnes <git@mathijs.vd-nes.nl>",
  "Christian Visintin <christian.visintin@veeso.dev>",
]
edition = "2024"

[dependencies]
anyhow = "1"
argh = "0.1"
blip_buf = ">=0.1.3"
ciborium = "0.2.2"
cpal = { version = "0.15" }
ctrlc = "3"
env_logger = "0.11"
font8x8 = "0.3"
gpio-cdev = "0.6"
libc = { version = "0.2" }
log = "0.4"
mmap = { version = "0.1" }
rppal = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_arrays = "0.2.0"
toml = "0.9"
typetag = "0.2.20"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "rboy-legogb"
path = "src/main.rs"
test = false
doc = false

[profile.release]
lto = true
